--- a/app/src/main/res/layout/activity_plus.xml
+++ b/app/src/main/res/layout/activity_plus.xml
@@ -1,45 +1,59 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.pouyakarimi.testappone.PlusActivity">
 
     <TableLayout
         android:id="@+id/tableLayout1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true">
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <Button
+                android:id="@+id/newPlus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Plus"
-                android:id="@+id/newPlus"
-                android:onClick="nextRow" />
+                android:onClick="nextRow"
+                android:text="New Plus" />
+
+        </TableRow>
+
+        <TableRow>
+
+            <Button
+                android:id="@+id/saveRow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="saveRow"
+                android:text="Save" />
         </TableRow>
 
         <TableRow
             android:id="@+id/tableRow1"
-            android:backgroundTint="@android:color/holo_green_light"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:backgroundTint="@android:color/holo_green_light">
 
             <TextView
                 android:id="@+id/textView1"
-                android:text="Pluses"
                 android:gravity="center"
+                android:text="Pluses"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
         </TableRow>
 
 
     </TableLayout>
+
 
 </RelativeLayout>
