--- a/app/src/main/res/layout/activity_plus.xml
+++ b/app/src/main/res/layout/activity_plus.xml
@@ -1,59 +1,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingLeft="@dimen/abc_action_bar_overflow_padding_start_material"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.pouyakarimi.testappone.PlusActivity">
 
-    <TableLayout
-        android:id="@+id/tableLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/plusButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true">
+        android:src="@mipmap/plus"
+        android:onClick="openDialog"
+        android:contentDescription="Plus"
+        android:layout_gravity="bottom" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/newPlus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="nextRow"
-                android:text="New Plus" />
-
-        </TableRow>
-
-        <TableRow>
-
-            <Button
-                android:id="@+id/saveRow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="saveRow"
-                android:text="Save" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:backgroundTint="@android:color/holo_green_light">
-
-            <TextView
-                android:id="@+id/textView1"
-                android:gravity="center"
-                android:text="Pluses"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        </TableRow>
-
-
-    </TableLayout>
-
-
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/plusListView"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/plusButton"
+        android:layout_alignRight="@+id/plusButton"
+        android:layout_alignEnd="@+id/plusButton" />
 </RelativeLayout>
