--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,14 +24,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Delta"
-        android:id="@+id/button2"
+        android:id="@+id/delta"
         android:layout_marginTop="42dp"
         android:layout_below="@+id/button"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="openNewPage" />
+        android:onClick="openDeltaPage" />
 
     <Button
         android:layout_width="wrap_content"
