--- a/app/src/main/res/layout/activity_delta.xml
+++ b/app/src/main/res/layout/activity_delta.xml
@@ -21,6 +21,6 @@
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
         android:onClick="openDialogDelta"
-        android:src="@android:drawable/ic_menu_close_clear_cancel" />
+        android:src="@android:drawable/arrow_up_float" />
 
 </android.support.design.widget.CoordinatorLayout>
