Adding - User Entity - User Database

--- a/app/src/main/res/menu/activity_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer.xml
@@ -2,8 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_showAll" android:icon="@android:drawable/ic_menu_camera"
-            android:title="Import" />
+        <item
+            android:id="@+id/nav_users"
+            android:icon="@android:drawable/ic_menu_view"
+            android:title="Users" />
         <item android:id="@+id/nav_plus" android:icon="@android:drawable/ic_menu_add"
             android:title="Plus" />
         <item android:id="@+id/nav_delta" android:icon="@android:drawable/arrow_up_float"
