--- a/app/src/main/res/layout/activity_plus2.xml
+++ b/app/src/main/res/layout/activity_plus2.xml
@@ -11,6 +11,7 @@
     <android.support.design.widget.NavigationView android:id="@+id/nav_view"
         android:layout_width="wrap_content" android:layout_height="match_parent"
         android:layout_gravity="start" android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_plus" app:menu="@menu/activity_plus2_drawer" />
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/activity_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
