--- a/app/src/main/res/layout/userprompts.xml
+++ b/app/src/main/res/layout/userprompts.xml
@@ -20,14 +20,17 @@
         android:id="@+id/editTextNameDialogUserInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Name" />
-
+        android:ems="10"
+        android:hint="Enter Name"
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/editTextEmailDialogUserInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Email" />
+        android:ems="10"
+        android:hint="Enter Email"
+        android:inputType="textEmailAddress" />
 
     <Switch
         android:id="@+id/primarySwitch"
