--- a/app/src/main/res/layout/app_bar_delta.xml
+++ b/app/src/main/res/layout/app_bar_delta.xml
@@ -4,10 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
-    tools:context="com.example.pouyakarimi.testappone.DeltaActivity">
+    tools:context="com.example.pouyakarimi.testappone.Delta">
 
-    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
-        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
@@ -15,9 +17,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_delta" />
+    <include layout="@layout/content_delta2" />
 
-    <android.support.design.widget.FloatingActionButton android:id="@+id/deltaButton"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
         android:onClick="openDialogDelta"
