--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -17,7 +17,10 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:src="@mipmap/plus_delta_icon" />
 
-    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+    <TextView
+        android:id="@+id/nav_primary_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="Plus &amp; Delta"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
