--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-        android:startColor="#81C784"
-        android:centerColor="#4CAF50"
-        android:endColor="#2E7D32"
-        android:type="linear"
-        android:angle="135"/>
+        android:angle="135"
+        android:centerColor="#071c8f"
+        android:endColor="#1b32ce"
+        android:startColor="#6d74ed"
+        android:type="linear" />
 </shape>
