--- a/app/src/main/res/layout/content_plus.xml
+++ b/app/src/main/res/layout/content_plus.xml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_plus"
-    tools:context="com.example.pouyakarimi.testappone.Plus">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.example.pouyakarimi.testappone.Plus"
+    tools:showIn="@layout/app_bar_plus">
 
     <ListView
+        android:id="@+id/plusListView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/plusListView"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentTop="true" />
+
+    <TextView
+        android:id="@+id/emptyPlusTextView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/plusListView"
+        android:text="Please Add Pluses!"
+        android:textAlignment="center"
+        android:textColor="@android:color/holo_red_dark"
+        android:visibility="invisible" />
 
 </RelativeLayout>
