--- a/app/src/main/res/layout/note_list_layout.xml
+++ b/app/src/main/res/layout/note_list_layout.xml
@@ -1,37 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/noteText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
+        android:padding="10dp"
         />
 
     <ImageView
         android:id="@+id/arrowUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/arrow_up_float"
-        android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:tint="@android:color/holo_green_light"
-        android:onClick="goUp"/>
-
-    <ImageView
-        android:id="@+id/arrowDown"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/arrow_down_float"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/arrowUp"
-        android:layout_marginRight="8dp"
-        android:tint="@android:color/holo_blue_light"
-        android:onClick="goDown"/>
+        android:src="@android:drawable/ic_menu_edit"
+        android:tint="@android:color/darker_gray" />
+
+    <!--<ImageView-->
+    <!--android:id="@+id/arrowDown"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:src="@android:drawable/arrow_down_float"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:layout_toLeftOf="@+id/arrowUp"-->
+    <!--android:layout_marginRight="8dp"-->
+    <!--android:tint="@android:color/holo_blue_light"-->
+    <!--android:onClick="goDown"/>-->
 
 </RelativeLayout>
